# Simple-Computer-Cluster

./: .gitignore  CMakeLists.txt  README.md  client.c  server.c
